kubernetes-manifest/metallb/metallb-network-policy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-apiserver-to-metallb-webhook
  namespace: metallb-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: metallb
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/component: kustomize-controller
            io.kubernetes.pod.namespace: flux-system
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
